[project]
name = "residualbind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "h5py>=3.11.0",
    "logomaker>=0.8.7",
    "matplotlib>=3.7.5",
    "notebook>=7.3.3",
    "numpy<1.24",
    "pandas>=2.0.3",
    "protobuf<3.21",
    "scipy>=1.10.1",
    "tensorflow==2.7.0",
]
